# scores-ws

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.toml.example
.github/workflows/: ci.yml
examples/: README.md  client.js  client.py  client.rs
src/: config.rs  context.rs  event.rs  main.rs  osu.rs
src/osu/: authorization.rs  client.rs  mod.rs  scores.rs
