[package]
name = "rosu-scores-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
eyre = "0.6.12"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
fxhash = "0.2.1"
memchr = "2.7.4"
papaya = "0.1.7"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing"] }
