[package]
name = "scores-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
eyre = "0.6.12"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
http-body-util = "0.1.2"
hyper = { version = "1.5.2", default-features = false, features = ["client", "http2"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http2", "tls12", "webpki-roots"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["client", "client-legacy", "http2", "tokio"] }
itoa = "1.0.14"
memchr = "2.7.4"
papaya = "0.1.7"
rustls = { version = "0.23.20", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
